--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
             ],
             "scripts": [],
             "assets": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/favicon.ico",
               "src/assets"
             ]
