--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
+    "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^13.2.1",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
