--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.11.4",
     "bootstrap-icons": "^1.8.1",
+    "igniteui-angular": "^13.1.12",
     "jw-bootstrap-switch-ng2": "2.0.5",
+    "material-icons": "^1.10.9",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
     "ngx-spinner": "^13.1.1",
