--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
     "ngx-spinner": "^13.1.1",
+    "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^13.2.1",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
