--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "material-icons": "^1.10.9",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
+    "ngx-device-detector": "^4.0.0",
     "ngx-spinner": "^13.1.1",
     "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^13.2.1",
